updated JVM args following GATK recommendations